# SemesterProjekt

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.docs/: ProjektPlan.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/caesar/: ResultContainer.cpp  ResultContainer.h  caesar.cpp  caesar.h  result.h
